fix : promotion transition bug (z-index) - spring.profiles.active 재설정

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1432,13 +1432,12 @@ a:focus {
   background-position: center center;
   opacity: 0;
   z-index: 0;
-  transition: opacity 0.25s ease-in, z-index 0.25s ease-in;
+  transition: opacity 0.25s ease-in;
 }
 
 #main-visual .img-box .img-item.current {
   opacity: 1;
-  z-index: 1;
-  transition: opacity 0.25s ease-in, z-index 0.25s ease-in;
+  transition: opacity 0.25s ease-in;
 }
 
 #main-visual .img-box .img-1 {
@@ -1470,7 +1469,6 @@ a:focus {
   margin: 0 auto;
   width: 980px;
   height: 100%;
-  z-index: 2;
 }
 
 #main-visual .direction-btn-box .prev {
@@ -1492,7 +1490,6 @@ a:focus {
   left: 50%;
   bottom: 15px;
   transform: translateX(-50%);
-  z-index: 2;
 }
 
 #main-visual .dot-btn-box .dot {
